# piki-multi-ai

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml  install.sh
crates/agent/: CLAUDE.md  Cargo.toml
crates/agent/src/: agent_loop.rs  context.rs  events.rs  lib.rs  prompt.rs
crates/agent/src/tools/: edit_file.rs  git_diff.rs  git_status.rs  list_files.rs  mod.rs  read_file.rs  search_code.rs  shell.rs
crates/api-client/: CLAUDE.md  Cargo.toml
crates/api-client/src/: chat_client.rs  client.rs  config.rs  lib.rs  llamacpp.rs  ollama.rs  parser.rs  protocol.rs  request.rs  response.rs
crates/api-client/src/http/: client.rs  mod.rs
crates/api-client/tests/: http_requests.rs  parser.rs
crates/api-client/tests/common/: mod.rs
crates/core/: CLAUDE.md  Cargo.toml
crates/core/src/: agent_state_detect.rs  chat.rs  domain.rs  git.rs  github.rs  idle_watcher.rs  lib.rs  notifications.rs  paths.rs  preflight.rs  providers.rs  shell_env.rs  sound.rs  sysinfo.rs  xdg.rs
crates/core/src/cli_agent/: install.rs  install_antigravity.rs  mod.rs  sock.rs
crates/core/src/cli_agent/scripts/: agy-on-post-tool-use.sh  agy-on-pre-invocation.sh  agy-on-stop.sh  agy-payload.sh  build-payload.sh  on-notification.sh  on-permission-request.sh  on-post-tool-use.sh  on-prompt-submit.sh  on-session-start.sh  on-stop.sh
crates/core/src/diff/: runner.rs
crates/core/src/github/: checkout.rs  mod.rs  pr_list.rs
crates/core/src/pty/: mod.rs  session.rs
crates/core/src/shell_integration/: install.rs  mod.rs  parser.rs
crates/core/src/shell_integration/scripts/: integration.bash  integration.fish  integration.zsh
crates/core/src/storage/: json.rs  mod.rs  sqlite.rs
crates/core/src/workspace/: config.rs  manager.rs  mod.rs  watcher.rs
crates/core/tests/: cli_agent_antigravity.rs  config_persistence.rs  diff_pipeline.rs  file_watcher.rs  preflight.rs  pty_session.rs  vt100_scrollback.rs  workspace_lifecycle.rs
crates/core/tests/common/: mod.rs
crates/desktop/: CLAUDE.md  Cargo.toml  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/desktop/frontend/src/: cm-theme.ts  ipc.ts  main.ts  pane-tree.ts  shortcuts.ts  state.ts  tab-mount.ts  theme.ts  types.ts
crates/desktop/frontend/src/components/: activity-bar.ts  agents-panel.ts  api-panel.ts  chat-panel.ts  code-editor-panel.ts  code-review.ts  command-palette.ts  diff-panel.ts  diff-viewer.ts  dropdown.ts  file-icons.ts  file-tree.ts  file-viewer.ts  fuzzy-search.ts  git-panel.ts  kanban-panel.ts  markdown-editor-panel.ts  markdown-viewer.ts  menu-bar.ts  pane-view.ts  path-picker.ts  project-search.ts  sidebar.ts  source-control.ts  status-bar.ts  tab-bar.ts  terminal-panel.ts  toast.ts  tooltip.ts  web-preview-panel.ts  web-preview-presets.ts  workspace-list.ts  workspace-switcher.ts
crates/desktop/frontend/src/styles/: activity-bar.css  api-panel.css  chat-panel.css  code-editor.css  command-palette.css  dashboard.css  dialog.css  diff.css  file-icons.css  file-tree.css  kanban.css  layout.css  markdown.css  menu-bar.css  pane.css  reset.css  sidebar.css  source-control.css  status-bar.css  sysinfo.css  tab-bar.css  terminal.css  theme-dialog.css  tooltip.css  variables.css  web-preview.css
crates/desktop/icons/: icon.icns
crates/desktop/src/: events.rs  main.rs  pty_raw.rs  state.rs
crates/desktop/src/commands/: agents.rs  api.rs  chat.rs  clipboard.rs  diff.rs  fs.rs  git.rs  gitlog.rs  kanban.rs  logs.rs  lsp.rs  markdown.rs  mod.rs  providers.rs  pty.rs  review.rs  search.rs  settings.rs  stash.rs  system.rs  theme.rs  workspace.rs
crates/desktop/src/lsp/: mod.rs  proxy.rs  registry.rs  server.rs
crates/tui/: CLAUDE.md  Cargo.toml
crates/tui/src/: action.rs  action_catalog.rs  app.rs  clipboard.rs  code_review.rs  command_palette.rs  config.rs  dialog_state.rs  event_loop.rs  helpers.rs  log_buffer.rs  main.rs  syntax.rs  test_support.rs  theme.rs  workspace_switcher.rs
crates/tui/src/action/: agent.rs  api.rs  chat.rs  files.rs  git.rs  git_merge.rs  git_stash.rs  mod.rs  review.rs  tabs.rs  workspace.rs
crates/tui/src/input/: app_actions.rs  chat_input.rs  code_review_input.rs  command_palette_input.rs  confirm_common.rs  dialog.rs  dialog_tests.rs  editor_input.rs  fuzzy_common.rs  fuzzy_input.rs  interaction.rs  list_nav.rs  mod.rs  mouse.rs  text_field_common.rs  workspace_switcher_input.rs
crates/tui/src/pty/: input.rs
crates/tui/src/ui/: api.rs  chat.rs  code_review.rs  command_palette.rs  dialogs.rs  diff.rs  editor.rs  fuzzy.rs  layout.rs  markdown.rs  mod.rs  panels.rs  pomodoro.rs  scrollbar.rs  sidebar.rs  statusbar.rs  subtabs.rs  tabs.rs  terminal.rs  which_key.rs  workspace_switcher.rs  workspaces.rs
crates/tui/src/ui/dialogs/: agents.rs  dashboard.rs  git.rs  mod.rs  providers.rs  system.rs  workspace.rs
crates/tui/src/ui/snapshots/: piki_multi_ai__ui__tests__about_overlay.snap  piki_multi_ai__ui__tests__about_overlay.snap.new  piki_multi_ai__ui__tests__agents_pane_with_rows.snap  piki_multi_ai__ui__tests__commit_message_dialog.snap  piki_multi_ai__ui__tests__confirm_close_tab_dialog.snap  piki_multi_ai__ui__tests__confirm_delete_dialog.snap  piki_multi_ai__ui__tests__confirm_merge_dialog.snap  piki_multi_ai__ui__tests__confirm_quit_dialog.snap  piki_multi_ai__ui__tests__dashboard_overlay.snap  piki_multi_ai__ui__tests__empty_app_layout.snap  piki_multi_ai__ui__tests__footer_from_keys_single_line.snap  piki_multi_ai__ui__tests__footer_wraps_on_narrow_terminal.snap  piki_multi_ai__ui__tests__help_body.snap  piki_multi_ai__ui__tests__help_overlay.snap  piki_multi_ai__ui__tests__missing_prereqs_dialog.snap  piki_multi_ai__ui__tests__new_tab_dialog.snap  piki_multi_ai__ui__tests__new_tab_dialog_agents_menu.snap  piki_multi_ai__ui__tests__status_bar_normal_no_workspace.snap  piki_multi_ai__ui__tests__status_bar_prefix_pending.snap  (+11 more)
crates/tui/src/workspace/: manager.rs  mod.rs  watcher.rs
crates/tui/tests/: keybinding_dispatch.rs
(+123 files in other folders)
