[package]
name = "piki-agent"
version.workspace = true
edition = "2024"

[dependencies]
piki-core = { path = "../core" }
piki-api-client = { path = "../api-client" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
