[package]
name = "piki-api-client"
version = "1.0.0-beta-dev"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
wiremock = "0.6"
