[package]
name = "piki-core"
version = "1.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "fs"] }

# PTY
portable-pty = "0.9"

# Terminal emulation
vt100 = "0.16"

# File watching
notify = "8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Fast synchronization primitives
parking_lot = "0.12"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"

# System info
systemstat = "0.2.6"
chrono = "0.4.44"

# SQLite storage backend
rusqlite = { version = "0.34", features = ["bundled"] }

# Home directory resolution
dirs = "6"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
