[package]
name = "agent-multi"
version = "0.95.0"
edition = "2024"

[[bin]]
name = "piki-multi-ai"
path = "src/main.rs"

[dependencies]
# Core library
piki-core = { path = "../core" }

# TUI
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Terminal emulation
vt100 = "0.16"
tui-term = "0.3"

# ANSI to ratatui conversion (for delta output)
ansi-to-tui = "8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Home directory resolution
dirs = "6"

# Fuzzy search
nucleo = "0.2"
ignore = "0.4"

# Clipboard
arboard = { version = "3", features = ["wayland-data-control"] }

# Fast synchronization primitives
parking_lot = "0.12"

# Error handling
anyhow = "1"

# CLI Argument Parsing
clap = { version = "4", features = ["derive"] }

# Markdown rendering
tui-markdown = "0.3"
chrono = "0.4.44"

# Kanban board
flow = { git = "https://github.com/juanknebel/flow" }
